# old_yolk

./: .gitmodules  CMakeLists.txt  yolk.sublime-project  yolk.sublime-workspace  yolk_setup.cmake
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/Riftball/: bowlball.h  shell3d.h
src/apps/bin2c/: CMakeLists.txt  bin2c.c
src/apps/bootstrap_system/: CMakeLists.txt  main.cpp
src/apps/bowlball/: CMakeLists.txt  bowlball.cpp  gamethread.cpp  gamethread.h  main.cpp  shell3d.cpp
src/apps/convert/: CMakeLists.txt  do.h  edtaa3func.cpp  edtaa3func.h  hq_resampler.cpp  hq_resampler.h  main.cpp  tao.cpp  tex.cpp  tof.cpp  tof.h  ttf.cpp
src/apps/convertmesh/: CMakeLists.txt  main.cpp
src/apps/cyberhackerspace/: CMakeLists.txt  cyberhackerspace.cpp  cyberhackerspace.h  gamethread.cpp  main.cpp  shell3d.cpp
src/apps/dummy_client/: CMakeLists.txt  handshake.cpp  main.cpp
src/apps/dvm_owned_dedi/: CMakeLists.txt  handshake.cpp  handshake.h  heart.cpp  heart.h  main.cpp
src/apps/dvm_test/: CMakeLists.txt  lli_test.cpp  main.cpp
src/apps/ercreinforce/: CMakeLists.txt  basestoragedevice.h  basestoragesystem.h  blockdevice.h  main.cpp  memoryblockstoragedevice.cpp  memoryblockstoragedevice.h  memoryblockstoragedevice_test.cpp  storagedevice.cpp  storagedevice.h  storagesystem.h  storagesystem_test.cpp
src/apps/gatekeeper/: CMakeLists.txt  connection.cpp  connection.h  dwmchan.cpp  dwmchan.h  dwmman.cpp  dwmman.h  example_config.json  fsmevents.h  gatekeeperfsm.h  heartbeat.cpp  heartbeat.h  main.cpp  tcpserver.cpp  tcpserver.h  tcptunnel.cpp  tcptunnel.h
src/apps/gfx_test/: CMakeLists.txt  freelist.h  gamethread.cpp  gamethread.h  gfxdbgconsole.cpp  gfxdbgconsole.h  main.cpp  proceduraltextureutils.cpp  proceduraltextureutils.h  procvoxtree.cpp  procvoxtree.h  shell3d.cpp  shell3d.h  voxtree.cpp  voxtree.h  voxtree.inl  voxtree_test.cpp  voxtreephysical.cpp  voxtreephysical.h  voxtreephysical.inl  voxtreerenderable.cpp  voxtreerenderable.h  voxtreerenderable.inl
src/apps/resilience/: CMakeLists.txt  gamethread.cpp  gfxdbgconsole.cpp  gfxdbgconsole.h  main.cpp  shell3d.cpp  shell3d.h
src/apps/trade/: CMakeLists.txt  gamethread.cpp  gamethread.h  main.cpp  shell3d.cpp
src/apps/vtdfh/: CMakeLists.txt  energycrystal.cpp  energycrystal.h  gamethread.cpp  gamethread.h  hovertank.cpp  hovertank.h  indigoweakspider.cpp  main.cpp  objectcam.cpp  objectcam.h  player.cpp  player.h  playership.cpp  playership.h  shell3d.cpp  testlvl.cpp  testlvl.h  trackingcam.cpp  trackingcam.h  vtdfh.cpp  vtdfh.h  zarchcam.cpp  zarchcam.h
src/apps/zombiehospital/: CMakeLists.txt  gamethread.cpp  main.cpp  pch.h  shell3d.cpp  shell3d.h
src/libs/: CMakeLists.txt
src/libs/bdwgc/: .gitignore  CMakeLists.txt
src/libs/binify/: CMakeLists.txt  FlexLexer.h  binify.cpp  binify.h  binify.vim  emit.cpp  emit.h  lex.yy.cc  lex.yy.cpp  lexer.l  parser.tab.cpp  parser.tab.cpp.h  parser.tab.hpp  parser.y
src/libs/bullet/: CMakeLists.txt
src/libs/cl/: CMakeLists.txt  buffer.cpp  buffer.h  cl.cpp  cl.h  clformatcracker.h  cmdqueue.h  context.h  image.cpp  image.h  kernel.cpp  kernel.h  memoryobject.h  ocl.cpp  ocl.h  platform.cpp  platform.h  programlibrary.h  programman.cpp  programman.h  workrange.h
src/libs/core/: CMakeLists.txt  aabb.cpp  aabb.h  aabb.inl  aligned_vector.h  boundedbuffer.h  buildconfig.h.in  bvh.cpp  bvh.h  clock.cpp  clock.h  clock.inl  cmdline_shell.cpp  colour.h  compiler_cuda.h  compiler_gcc.h  compiler_llvm.h  compiler_ms.h  convextest.cpp  convextest.h  core.cpp  core.h  core_pch.cpp  core_utils.h  coreresources.cpp  coreresources.h  coroutine.h  debug.cpp  debug.h  debug_render.cpp  debug_render.h  development_context.cpp  development_context.h  exception.h  file_path.cpp  file_path.h  fileio.cpp  fileio.h  frustum.h  gc_unity.c  (+51 more)
src/libs/dwm/: CMakeLists.txt  bitcoder.cpp  bitcoder.h  dwm.cpp  dwm.h  ieethreadcontext.h  isolatedexecengine.cpp  isolatedexecengine.h  mmu.cpp  mmu.h  sandboxmemorymanager.cpp  sandboxmemorymanager.h  trustedregion.cpp  trustedregion.h  vmapi.cpp  vmthread.cpp  vmthread.h  vmthreads.cpp  vmthreads.h  world.cpp  world.h
src/libs/dwm_client/: CMakeLists.txt  client.cpp  client.h  clientworld.cpp  clientworld.h  debugcamcontext.cpp  debugcamcontext.h  inputframe.h  inputhandlercontext.cpp  inputhandlercontext.h
src/libs/dx11/: CMakeLists.txt  databuffer.cpp  databuffer.h  dx11.cpp  dx11.h  dxgiformat_cracker.h  gfx.cpp  gfx.h  gfx_debug_render.cpp  gfx_debug_render.h  gfxresources.cpp  gfxresources.h  ibmanager.cpp  ibmanager.h  imagecomposer.cpp  imagecomposer.h  light.h  lightcontext.h  lightcontextd3d11.cpp  material.cpp  material.h  mesh.cpp  mesh.h  program.cpp  program.h  programman.cpp  programman.h  rendercamera.cpp  rendercamera.h  rendercontext.cpp  rendercontext.h  rendermatrixcache.cpp  rendermatrixcache.h  renderstates.cpp  renderstates.h  renderworld.cpp  renderworld.h  resource.cpp  resource.h  resourceloader.cpp  (+22 more)
src/libs/export/: CMakeLists.txt  edtaa3func.cpp  edtaa3func.h  export.h  fontexport.cpp  hieexport.cpp  hq_resampler.h  hq_resampler.inl  imageimport.cpp  imageimport.h  maniexport.cpp  propexport.cpp  texexport.cpp  texexport.h  texinconvert.cpp  texinconvert.h  texturealtasexport.cpp  textureimage.h  wobexp.cpp  wobexp.h
src/libs/freetype-2.5.3/: CMakeLists.txt
src/libs/gl/: CMakeLists.txt  constantcache.cpp  constantcache.h  databuffer.cpp  databuffer.h  dds.h  ddsloader.cpp  ddsloader.h  debugpipeline.cpp  debugpipeline.h  debugprims.cpp  debugprims.h  dxgiformat.h  dxgiformat_cracker.h  fbo.cpp  fbo.h  forwardpipeline.cpp  forwardpipeline.h  gfx.cpp  gfx.h  gl.cpp  gl.h  glew.c  glformat_cracker.h  gpu_constants.h  heightfield.h  imagecomposer.cpp  imagecomposer.h  memory.cpp  memory.h  ogl.cpp  ogl.h  program.cpp  program.h  programpipelineobject.cpp  programpipelineobject.h  rendercontext.cpp  rendercontext.h  resourceloader.cpp  resourceloader.h  (+16 more)
src/libs/gui/: CMakeLists.txt
src/libs/jpeg/: CMakeLists.txt  Makefile.in  aclocal.m4  configure  configure.ac
src/libs/lightwaveloader/: LWBlok.h  (+40 more)
(+49087 files in other folders)
