
add_subdirectory( bin2c )
#add_subdirectory( bootstrap_system )
#add_subdirectory( gatekeeper )
#add_subdirectory( gfx_test )
#add_subdirectory( dvm_owned_dedi )
#add_subdirectory( dummy_client )
add_subdirectory( convert )
#add_subdirectory( ercreinforce )

#add_subdirectory( vtdfh )
#add_subdirectory( cyberhackerspace )
#add_subdirectory( bowlball )
#add_subdirectory( zombiehospital )
add_subdirectory( trade )
