
add_subdirectory( bin2c )
#add_subdirectory( bootstrap_system )
#add_subdirectory( gatekeeper )
IF( NOT HEADLESS_PLATFORM )
	add_subdirectory( gfx_test )
add_subdirectory( resilience )
ENDIF( NOT HEADLESS_PLATFORM )

#add_subdirectory( dvm_owned_dedi )
#add_subdirectory( dummy_client )
add_subdirectory( convert )
#add_subdirectory( ercreinforce )
#add_subdirectory( small_tests )

#add_subdirectory( vtdfh )
#add_subdirectory( cyberhackerspace )
#add_subdirectory( Riftball )
#add_subdirectory( zombiehospital )
#add_subdirectory( trade )
