cmake_minimum_required( VERSION 2.8 )

add_subdirectory( binify )
add_subdirectory( core )
add_subdirectory( protocols )
add_subdirectory( glog )
add_subdirectory( scene )
IF( USE_DX11 )
	add_subdirectory( dx11 )
ENDIF( USE_DX11 )
IF( USE_OPENGL )
	add_subdirectory( gl )
ENDIF( USE_OPENGL )
IF( USE_OPENCL )
	add_subdirectory( cl )
ENDIF( USE_OPENCL)

add_subdirectory( bullet )

add_subdirectory( meshmod )
add_subdirectory( meshops )
add_subdirectory( meshimport )
add_subdirectory( export )
add_subdirectory( lightwaveloader )

IF( USE_DWM )
	add_subdirectory( dwm )
	add_subdirectory( dwm_client )
ENDIF( USE_DWM )

add_subdirectory( localworld )
