cmake_minimum_required( VERSION 2.8 )
# TODO only on non x86 without ASM support use generics
IF( UNIX )
	add_definitions( "-D__TBB_USE_GENERIC_DWORD_LOAD_STORE=1" )
	add_definitions( "-DUSE_PTHREAD -DTBB_USE_GCC_BUILTINS -D__TBB_GCC_BUILTIN_ATOMICS_PRESENT" )
	list( APPEND targ_link_libs pthread dl )
ENDIF( UNIX )


add_subdirectory( bdwgc )
add_subdirectory( binify )
add_subdirectory( bullet )
add_subdirectory( core )
add_subdirectory( glog )
add_subdirectory( jpeg )
add_subdirectory( protobuf )
add_subdirectory( protocols )
add_subdirectory( scene )
add_subdirectory( styx )
add_subdirectory( tbb )
add_subdirectory( zlib )

IF( USE_DX11 )
	add_subdirectory( dx11 )
ENDIF( USE_DX11 )
IF( USE_OPENGL )
	add_subdirectory( gl )
ENDIF( USE_OPENGL )
IF( USE_OPENCL )
	add_subdirectory( cl )
ENDIF( USE_OPENCL)

add_subdirectory( meshmod )
add_subdirectory( meshops )
add_subdirectory( meshimport )
add_subdirectory( export )
add_subdirectory( lightwaveloader )

IF( USE_DWM )
	add_subdirectory( dwm )
	add_subdirectory( dwm_client )
ENDIF( USE_DWM )

add_subdirectory( localworld )
add_subdirectory( gui )