cmake_minimum_required( VERSION 2.8 )

file( GLOB cpp_src_files *.cpp *.cxx)
file( GLOB c_src_files *.c )
file( GLOB header_files *.h *.inl *.hpp *.hxx )
list( APPEND src_files ${cpp_src_files} ${c_src_files} )

# ADD_MSVC_PRECOMPILED_HEADER( "convertmesh_pch.h" "${cpp_src_files}" )
list( APPEND targ_link_libs ${Core_LIBRARIES} json_spirit scene localworld BulletCollision BulletDynamics LinearMath )
IF( USE_DWM )
	list( APPEND targ_link_libs dwm_client )
ENDIF( USE_DWM )
if( USE_OPENGL )
	list( APPEND targ_link_libs gl )
endif()
if( USE_OPENCL )
	list( APPEND targ_link_libs cl ${OPENCL_LIBRARY} )
endif()
if( USE_DX11 )
	list( APPEND targ_link_libs dx11 d3d11 dxgi d3dcompiler dxguid)
endif()
if( UNIX )
	list( APPEND targ_link_libs pthread dl GL X11 )
endif()

if( UNIX )
	add_executable( gfx_test ${src_files} ${header_files} )
else()
	add_executable( gfx_test WIN32 ${src_files} ${header_files} )
	SET_TARGET_PROPERTIES( gfx_test PROPERTIES LINK_FLAGS "/SAFESEH:NO")	
endif()
target_link_libraries( gfx_test ${targ_link_libs} )

# make a nice hierachy
set_target_properties( gfx_test PROPERTIES FOLDER "Apps")

